--- a/test/style.css
+++ b/test/style.css
@@ -42,6 +42,7 @@
 	stroke-width: 1px;
 }
 
+/*.nutsrg { fill: #eee; }*/
 
 .cntrg {
 	fill: lightgray;
@@ -53,4 +54,15 @@
 
 .cntrg:hover {
 	fill: darkgray;
+}
+
+.symbol {
+	fill: #f11;
+	fill-opacity: .6;
+	stroke: #fff;
+	stroke-width: 0.6px;
+}
+
+.symbol:hover {
+	fill: #faa;
 }
